# rwar

./: .gitignore  .pylintrc  CONTRIBUTING.md  README.md  config.json  pyproject.toml  requirements.txt  rwar.py
.github/workflows/: ci.yml
data/: Science Fiction.txt  Turkish Delight.txt
data/markdown-samples/: example.md
data/text-samples/: Science Fiction.txt
rwar_ssg/: File.py  Parser.py  Utils.py  rwar.py
src/: File.py  Parser.py  Utils.py
test/: test_parser.py  test_ssg.py  test_utils.py
