[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "rwar_ssg"
version = "1.0.0"
authors = [
    {name = "Samina Rahman", email = "saminarp15@gmail.com"},
]
description = "A Simple Static Site Generator."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    # "stringcase ~=1.2.0",
    "args ~=0.1.0",
    "autopep8 ~=1.7.0",
    "charset-normalizer ~=2.1.1",
    "clint ~=0.5.1",
    "dominate ~=2.7.0",
    "idna ~=3.4",
    "markdown2 ~=2.4.6",
    "pycodestyle ~=2.9.1",
    "pyfiglet ~=0.8.post1",
    "requests ~=2.28.1",
    "toml ~=0.10.2",
    "urllib3 ~=1.26.12",
    "yarg ~=0.1.9",
    "pylint ~=2.15.5",
    "black ~=22.10.0",
    "virtualenv ~=20.16.6"
]

[project.urls]
"Homepage" = "https://github.com/saminarp/rwar"
"Bug Tracker" = "https://github.com/saminarp/rwar/issues"